k8s/user/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: mini

spec:
  replicas: 2

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:
      containers:
        - name: user-service
          image: girijos/mini-amazon-user-service:1.0

          ports:
            - containerPort: 5000
