k8s/user/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: mini

spec:
  selector:
    app: user-service

  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP

  type: ClusterIP
